@@ -32,6 +32,7 @@ Roundcube Webmail ContextMenu
  * Add menu-change JS event listener
  * Support new Contacts toolbar with Copy/Move actions (req RC eb0228b)
  * Add menus to Settings screens
+ * Add contextmenu_mouseover_timeout config option to override default mouseover timeout for submenus
 
 Version 2.3 (2017-06-14, rc-1.3)
 =================================================
